Changed ftnplsw.html to modules.html and scripts.html
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@506 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/applications.html
+++ b/applications.html
@@ -20,8 +20,9 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html">Scripts</a> |
-        <a href="./ftnplapps.html">Apps</a> |
+        <a href="./modules.html">Modules</a> |
+        <a href="./scripts.html">Scripts</a> |
+        <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
         <a href="./information.html">Info</a> |
         <a href="./contact.html">Contact Us</a> 
@@ -32,7 +33,7 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h3><a name="apps">Fidonet Applications and Perl</a></h3>
+        <h2>Fidonet Applications and Perl</h2>
 
         <p>The following is a sample listing of Fidonet related Software applications
         that can use or are already using Perl scripts.</p>
@@ -42,18 +43,18 @@
           <li>Has an extensive set of Perl scripts associated with it.</li>
           <li>Fidogate (<a href="http://fidogate.sf.net"> fidogate.sf.net</a>) project at SourceForge</li>
           <li>A Russian version of the Fidogate (<a href="http://rusfidogate.sf.net"> rusfidogate.sf.net</A>) project at SourceForge</li>
-	 </ul>
+			</ul>
   
          <ul>HPT (<a href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)
           <li>Highly Portable Tosser;  part of the <a href="http://husky.sourceforge.net"> Husky </A>project.</li>
           <li>Has an extensive set of Perl hooks built into it.</li>
-	 </ul>
+			</ul>
 	 
          <ul>BBBS (<a href="http://www.bbbs.net"> www.bbbs.net</a>)
           <li>This is a BBS program that is available for many different platforms, 
              and while it has it's own scripting language it can also be set up to
              use Perl.</li>
-	 </ul>
+			</ul>
 
         </dl>
 
