--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./modules.html">Modules</a> |
+        <a href="./scripts.html">Scripts</a> |
         <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
         <a href="./information.html">Info</a> |
@@ -43,10 +44,10 @@
 
 	  <dl>
 	    <dt>FTN related Perl scripts</dt> 
-	     <dd>Those hosted here at <a href="ftnplsw.html#scrpts">ftnpl</a></dd>
-	     <dd>Links to other Fidonet related Perl <a href="ftnplsw.html#ftnpllinks">scripts</a></dd>
+	     <dd>Those hosted here at <a href="scripts.html">ftnpl</a></dd>
+	     <dd>Links to other Fidonet related Perl <a href="links.html">scripts</a></dd>
 	    <dt>FTN Related Applications</dt> 
-	     <dd>Fidonet related Software <a href="ftnplsw.html#apps"> Applications </a>that could or are already using Perl scripts</dd>
+	     <dd>Fidonet related Software <a href="applications.html"> Applications </a>that could or are already using Perl scripts</dd>
 	   </dl>
 
       </div>
