--- a/modules.html
+++ b/modules.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-     <title>How to contact ftnpl.sf.net members</title>
+     <title>FTN Software and Perl</title>
      <meta name="author" content="Robert James Clay">
-     <meta name="keywords" CONTENT="Contact, ftnpl, Email, Fidonet">
-     <meta http-equiv="KEYWORDS" CONTENT="Contact, ftnpl, Email, Fidonet">
-     <meta name="description" CONTENT="How to contact ftnpl project members. ">
+     <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
+     <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
+     <meta name="description" CONTENT="Fidonet(FTN) related Perl Modules">
      <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
      <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
   </head>
@@ -14,10 +14,9 @@
       <div class="midHeader">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          How to contact ftnpl members 
+          Fidonet(FTN) related Perl Modules
         </div>
       </div>
-
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
@@ -32,29 +31,35 @@
 
     <div id="mainbody">
       <div class="rowOfBoxes">
-        <div class="fullWidth noBorderOnLeft">
-	<h2>Contacting <a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
+        <div class="fullWidth">
 
-	<ul>
-	 <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sourceforge.net</i></a></li>
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/544@fidonet.</li>
-	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/400.</li>
-	</ul>
+        <h2>Fidonet related Perl Modules hosted here at the ftnpl project.</h2>
 
-	<h2>Contacting <a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
+			<ul>Nodelist
+          <li><b>ftnplnl</b> - FTN::Nodelist - Perl module for reading FTN nodelists.  (to be developed)</li>
+			</ul>
 
-	<ul>
-	 <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sourceforge.net</i></a></li>
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
-	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
-	</ul>
+			<ul>Packet
+          <li><b>ftnplpkt</b> - FTN::Packet - Perl module for reading/writing FTN packets.  (to be developed)</li>
+			</ul>
+        
+			<ul>Tick
+          <li><b>ftnpltic</b> - FTN::Tick - Perl module for processing FTN Tick files.  (to be developed)</li>
+			</ul>
 
-	<h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
-	
-	<ul>
-	 <li><a href="mailto:bswift@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
-	</ul>
+			<ul>SRIF
+          <li><b>ftnplsrf</b> - FTN::SRIF - Perl module for processing SRIF files for file requests. (to be developed)</li>
+			</ul>
+  
+			<ul>Utilities
+          <li><b>ftnplutl</b> - FTN::Utility - Perl module for miscellaneous FTN utility routines.  </li>
+			</ul>
+
+        <h2>Other Fidonet related Perl Modules.</h2>
+
+        <ul>A Perl::JAM Module, by Johann Billings
+           <li><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</li>
+        </ul>
 
 
         </div>
