--- a/information.html
+++ b/information.html
@@ -20,7 +20,8 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./modules.html">Modules</a> |
+        <a href="./scripts.html">Scripts</a> |
         <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
         <a href="./information.html">Info</a> |
