--- a/links.html
+++ b/links.html
@@ -20,7 +20,8 @@
       <div class="subHeader">
         <span class="doNotDisplay">Navigation:</span>
         <a href="./index.html">Home</a> |
-        <a href="./ftnplsw.html">Scripts</a> |
+        <a href="./modules.html">Modules</a> |
+        <a href="./scripts.html">Scripts</a> |
         <a href="./applications.html">Apps</a> |
         <a href="./links.html">Links</a> |
         <a href="./information.html">Info</a> |
@@ -32,7 +33,7 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h3><a name="ftnpllinks">Fidonet related Perl Links</a></h3>
+        <h2>Fidonet related Perl Links</h2>
 
         <ul>The vented spleen BBS
            <li>Dos/Windows and Fidonet related Perl files</li>
