Added some Perl information & Links.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@507 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -33,22 +33,26 @@
       <div class="rowOfBoxes">
         <div class="twoThirds noBorderOnLeft">
 
-	<p> Fidonet is an international amateur network of computer systems, often
-	 running public access bbs's, and all connected by modem (& often via the
-	internet as well).  This site is intended to provide a repository of Perl
-	scripts, or links to where such Perl scripts might be found, for use on
-	Fidonet Technology Networks (FTN) systems.   A longer term goal is for
-	the development of Perl Modules, using the FTN namespace. </p>
-
-	<h2><a href="ftninfo.html">Fidonet</a> Software and Perl</h2>
+		<p> Fidonet is an international amateur network of computer systems, often
+		running public access bbs's, and all connected by modem (& often via the
+		internet as well).  This site is intended to provide a repository of Perl
+		scripts, or links to where such Perl scripts might be found, for use on
+		Fidonet Technology Networks (FTN) systems.   A longer term goal is for
+		the development of Perl Modules, using the FTN namespace. </p>
 
 	  <dl>
 	    <dt>FTN related Perl scripts</dt> 
 	     <dd>Those hosted here at <a href="scripts.html">ftnpl</a></dd>
 	     <dd>Links to other Fidonet related Perl <a href="links.html">scripts</a></dd>
+
 	    <dt>FTN Related Applications</dt> 
 	     <dd>Fidonet related Software <a href="applications.html"> Applications </a>that could or are already using Perl scripts</dd>
-	   </dl>
+
+	    <dt>Information</dt> 
+	     <dd><a href="information.html#fidonet">Fidonet</a>&nbsp;Information </dd>
+	     <dd><a href="information.html#perl">Perl</a>&nbsp;Information </dd>
+
+	  </dl>
 
       </div>
 
