--- a/information.html
+++ b/information.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-     <title>ftnpl.sf.net:  Fidonet/FTN Info</title>
+     <title>ftnpl.sf.net:  Fidonet/Perl Info</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
-     <meta http-equiv="KEYWORDS" CONTENT="Perl, Fidonet, FTN, BBS">
-     <meta name="description" CONTENT="Information and links about Fidonet. ">
+     <meta http-equiv="KEYWORDS" CONTENT="Perl, Fidonet, FTN, Information">
+     <meta name="description" CONTENT="Information and links about Fidonet and Perl. ">
      <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
      <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
   </head>
@@ -30,56 +30,76 @@
     </div>
 
     <div id="mainbody">
+
       <div class="rowOfBoxes">
-        <div class="twoThirds noBorderOnLeft">
 
-	    <p> Fidonet is an international amateur network of computer systems, often
-	    running public access bbs's, and all connected by modem (& often via the
-	    internet as well).  &#34;Othernets&#34; are distribution networks which use fidonet software.  Also known as Fidonet Technogy Networks (FTN).</p>
+			<div class="twoThirds noBorderOnLeft">
+				<h2><a href="fidonet">Fidonet</a></h2>
+				<p> Fidonet is an international amateur network of computer systems, often
+				running public access bbs's, and all connected by modem (& often via the
+				internet as well).  &#34;Othernets&#34; are distribution networks which use fidonet software.  Also known as Fidonet Technogy Networks (FTN).</p>
 
-		 <p><a href="http://www.fidonet.org/inet92_Randy_Bush.txt">FidoNet: Technology, Use, Tools, and History</a>, By Randy Bush	</p>    
+				<p><a href="http://www.fidonet.org/inet92_Randy_Bush.txt">FidoNet: Technology, Use, Tools, and History</a>, By Randy Bush	</p>    
 
-	    <p>  &#34;Fido&#34;, &#34;<a href="http://www.fidonet.org">Fidonet</a>&#34;,
-	     and the dog-with-diskette are U.S. registered trademarks of Tom Jennings, tomj@wps.com. </p>
+				<p>  &#34;Fido&#34;, &#34;<a href="http://www.fidonet.org">Fidonet</a>&#34;,
+				and the dog-with-diskette are U.S. registered trademarks of Tom Jennings, tomj@wps.com. </p>
+			</div>
 
-      </div>
-
-      <div class="oneThird">
-	<h2>Quick links</h2> 
-	<ul>
-            <li><a href="http://www.fidonet.org">www.fidonet.org</a></li>
-            <li><a href="http://www.z1.fidonet.org">www.z1.fidonet.org</a></li>
-            <li><a href="http://www.z3.fidonet.org">www.z3.fidonet.org</a></li>
-            <li><a href="http://www.z6.fidonet.org">www.z6.fidonet.org</a></li>
-            <li><a href="http://www.fidonet.us">www.fidonet.us</a></li>
-            <li><a href="http://www.fidonet.ca">www.fidonet.ca</a></li>
-            <li><a href="http://www.ftsc.org">www.ftsc.org</a></li>
-       </ul>
-
-       <ul>
-	    <li><a href="http://host.z1.fidonet.net">host.z1.fidonet.net</a></li>
-            <li><a href="http://wwb.z1.fidonet.net">wwb.z1.fidonet.net</a></li>
-       </ul>
+	      <div class="oneThird">
+				<h2>Fidonet Quick Links</h2> 
+				<ul>
+	            <li><a href="http://www.fidonet.org">www.fidonet.org</a></li>
+	            <li><a href="http://www.z1.fidonet.org">www.z1.fidonet.org</a></li>
+	            <li><a href="http://www.z3.fidonet.org">www.z3.fidonet.org</a></li>
+	            <li><a href="http://www.z6.fidonet.org">www.z6.fidonet.org</a></li>
+	            <li><a href="http://www.fidonet.us">www.fidonet.us</a></li>
+	            <li><a href="http://www.fidonet.ca">www.fidonet.ca</a></li>
+	            <li><a href="http://www.ftsc.org">www.ftsc.org</a></li>
+	            <li><a href="http://host.z1.fidonet.net">host.z1.fidonet.net</a></li>
+				</ul>
+	      </div>
 
       </div>
 
+      <div class="rowOfBoxes dividingBorderAbove">
+
+	      <div class="oneThird noBorderOnLeft">
+				<h2>Perl Quick Links</h2> 
+				<ul>
+	            <li><a href="http://www.cpan.org">www.perl.org</a></li>
+	            <li><a href="http://faq.cpan.org">faq.perl.org</a></li>
+	            <li><a href="http://www.cpan.org">www.cpan.org</a></li>
+	            <li><a href="http://bookmarks.cpan.org">bookmarks.cpan.org</a></li>
+	 			</ul>
+			</div>
+			
+			<div class="twoThirds">
+				<h2><a href="perl">Perl</a></h2>
+				<p>Perl is a stable, cross platform programming language.
+				 It is used for mission critical projects in the public and private
+				 sectors and is widely used to program web applications of all needs.</p>
+				<p>Perl is widely used by Fidonet sysops;  both in or with applications 
+				as well as in individual scripts.</p>
+			</div>
+
+	    </div>
     </div>
     
     <div id="footer">
-	<table width="100%">
-	 <tr><td>
+		<table width="100%">
+		<tr><td>
 
-	 <a href="http://sourceforge.net">
-	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+		<a href="http://sourceforge.net">
+		<img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
+		width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
-	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+		</td><td align="right">
+		<font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
-	 </td></tr)
-	</table>
+		</td></tr>
+		</table>
     </div>
 
   </body>
