Added some links.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@508 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/links.html
+++ b/links.html
@@ -40,6 +40,16 @@
            <li>Freq'able at Fidonet 1:249/139</li>
         </ul>
 
+        <ul><a href="http://www.filegate.net">filegate.net</a>
+           <li>Dos/Windows and Fidonet related Perl files</li>
+           <li>Freq'able at Fidonet 1:261/38</li>
+        </ul>
+
+        <ul><a href="http://www.ftngate.net">FTNGate.Net</a>
+           <li>Fidonet Related Perl files</li>
+           <li>Also Freq'able at Fidonet 1:120/544</li>
+        </ul>
+
         <ul>A Perl::JAM Module, by Johann Billings
            <li><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</li>
         </ul>
