Changed midHeader to just Header.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@509 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <body>
 
     <div id="header">
-      <div class="midHeader">
+      <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
           How to contact ftnpl members 
