Corrected link for Perl::JAM module to new URL
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@519 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/modules.html
+++ b/modules.html
@@ -58,7 +58,7 @@
         <h2>Other Fidonet related Perl Modules.</h2>
 
         <ul>A Perl::JAM Module, by Johann Billings
-           <li><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</li>
+           <li><a href="http://www.billingware.org/jamlib.html"> http://www.billingware.org/jamlib.html</a>:  Link is at botton of page.</li>
         </ul>
 
 
@@ -76,7 +76,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
