--- a/links.html
+++ b/links.html
@@ -51,7 +51,7 @@
         </ul>
 
         <ul>A Perl::JAM Module, by Johann Billings
-           <li><a href="http://www.df.lth.se/~billing/jamlib.html"> http://www.df.lth.se/~billing/jamlib.html</a>:  Link is at botton of page.</li>
+           <li><a href="http://www.billingware.org/jamlib.html"> http://www.billingware.org/jamlib.html</a>:  Link is at botton of page.</li>
         </ul>
 
 
@@ -69,7 +69,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
