changed link for z1 net dns
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@520 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/information.html
+++ b/information.html
@@ -55,7 +55,7 @@
 	            <li><a href="http://www.fidonet.us">www.fidonet.us</a></li>
 	            <li><a href="http://www.fidonet.ca">www.fidonet.ca</a></li>
 	            <li><a href="http://www.ftsc.org">www.ftsc.org</a></li>
-	            <li><a href="http://host.z1.fidonet.net">host.z1.fidonet.net</a></li>
+	            <li><a href="http://ns.z1.fidonet.net">ns.z1.fidonet.net</a></li>
 				</ul>
 	      </div>
 
@@ -94,7 +94,7 @@
 		width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 		</td><td align="right">
-		<font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+		<font size="-2">Copyright &copy; 2006 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
