--- a/index.html
+++ b/index.html
@@ -86,7 +86,33 @@
 	-->
 	   </uL>
 
+        </div>
+      </div>
 
+      <div class="rowOfBoxes dividingBorderAbove">
+        <div class="fullWidth">
+<!--	    
+<table BORDER=0 CELLPADDING=0 >
+ <tr>
+  <td> -->
+    This <a href="http://www.fidonet.us/fidoring" target="_top">FidoRing-FidoNet Web Ring</a> site administered by <a href="mailto:jame@users.sourceforge.net" target="_top">Robert J. Clay</a>.<br>
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/list.cgi?num=10&amp;order=prev&amp;link=31">Previous 10</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/jump.cgi?action=previous&amp;num=1&amp;link=31" target="_top">Skip prev</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/jump.cgi?action=previous&amp;num=0&amp;link=31" target="_top">Previous</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/jump.cgi?action=next&amp;num=0&amp;link=31" target="_top">Next</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/jump.cgi?action=next&amp;num=1&amp;link=31" target="_top">Skip next</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/list.cgi?num=10&amp;order=next&amp;link=31">Next 10</a> |
+    <a href="http://www.fidonet.us/cgi-bin/fidoring/jump.cgi?action=random" target="_top">Random Site</a> |
+    <a href="http://www.fidonet.us/fidoring/sitelist.html" target="_top">List Sites</a> |
+    <a href="http://www.fidonet.us/fidoring" target="_top">Join FidoRing Web Ring</a> 
+<!--
+  </td>
+  <td>
+    <a href="http://www.fidonet.us/fidoring" target="_top"><img SRC="/smdogwhiteright.gif" BORDER=0 height=29 width=22></a> <br>
+  </td>
+ </tr>
+</table>
+-->
         </div>
       </div>
 
@@ -101,7 +127,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
