spelling correction in binkd item
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@523 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/applications.html
+++ b/applications.html
@@ -50,7 +50,7 @@
 	</ul>
 	 
         <ul>BinkD
-          <li>BinkD is Fidonet mailer which is desinged to operate over TCP/IP netowrks and now has an extensive set of Perl hooks built into it.</li>
+          <li>BinkD is Fidonet mailer which is designed to operate over TCP/IP netowrks and now has an extensive set of Perl hooks built into it.</li>
           <li>A good information site for BinkD is at <a href="http://binkd.grumbler.org"> binkd.grumbler.org </A></li>
 	</ul>
 	 
