corrected page title
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@524 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/modules.html
+++ b/modules.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>FTN Software and Perl</title>
+     <title>FTN Perl Modules</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
      <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
