removed utilities section
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@525 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/scripts.html
+++ b/scripts.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>FTN Software and Perl</title>
+     <title>FTN Perl Scripts</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
      <meta http-equiv="KEYWORDS" CONTENT="Perl, Fidonet, FTN, BBS">
@@ -49,10 +49,6 @@
           <li><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.</li>
 			</ul>
   
-			<ul>Utilities
-          <li><b>ftnplutl</b> - FTN::Utility - Perl module for miscellaneous FTN utility routines.  (to be developed)</li>
-			</ul>
-
 			<ul>BBS
           <li><b>bbsdbpl</b> - Perl scripts for an FTN compatible BBS, with the message base being held in a MySQL Database.  </li>
 			</ul>
@@ -86,7 +82,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2005 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
 <!--	  Any comments, suggestions, questions, etc. about this or
 	   any other page at this site; please feel free to
 	    <a href="contact.html">contact</a> one of us. -->
