rewrote srifpl item
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@526 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/scripts.html
+++ b/scripts.html
@@ -46,7 +46,7 @@
 			</ul>
         
 			<ul>SRIF
-          <li><b>srifpl</b> - srif.pl - Perl module for processing SRIF files for file requests.</li>
+          <li><b>srifpl</b> - srif.pl - Test script for an external file request processor using SRIF files.</li>
 			</ul>
   
 			<ul>BBS
