--- a/ftnplsrf.html
+++ b/ftnplsrf.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <title>FTN Perl Modules</title>
+     <title>FTN::SRIF Perl Module</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
      <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
@@ -14,7 +14,7 @@
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          Fidonet(FTN) related Perl Modules
+          FTN::SRIF Perl Module
         </div>
       </div>
       <div class="subHeader">
@@ -47,33 +47,11 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>Fidonet related Perl Modules in the FTN namespace.</h2>
-
-	    <ul>
-	    	<li>ftnpladx - FTN::Address - Perl module for processing FTN Addresses.  </li>
-
-        	<li>ftnplinb - FTN::Inbound - Perl module for processing FTN inbound directories. </li>
-
-        	<li>ftnpllog - FTN::Log - Perl module for FTN compatible Logging. </li>
-		    
-        	<li>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  </li>
-
-        	<li>ftnplout - FTN::Outbound - Perl module for processing FTN outbound directories. </li>
-
-    		<li>ftnplpkt - FTN::Packet - Perl module for reading/writing FTN packets.  </li>
+        <h2>FTN::SRIF</h2>
         
-		<li>ftnplsrf - FTN::SRIF - Perl module for processing SRIF files for file requests. </li>
-
-        	<li>ftnpltic - FTN::Tick - Perl module for processing FTN Tick files.  </li>
-		
-        	<li>ftnplutl - FTN::Utility - Perl module for miscellaneous FTN utility routines. </li>
-	    </ul>
-
-        <h2><a href="ftnmodpl.html">Other </a>Fidonet related Perl Modules.</h2>
-
-        <ul>A Perl JAM.pm Module, by Johann Billings
-           <li><a href="http://www.billingware.org/jamlib.html"> http://www.billingware.org/jamlib.html</a>:  Link is at botton of page.</li>
-        </ul>
+		<ul>ftnplsrf - FTN::SRIF - Perl module for processing SRIF files for file requests. 
+		    <li>(under development)</li>
+		</ul>
 
 
         </div>
