corrected cvs link after 12 May 06 SF CVS server change
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@529 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	   </ul>
 
 	   <ul>Project CVS 
-	    <li><a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/ftnpl">Browse the Project CVS</a> </li> 
+	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">Browse the Project CVS</a> </li> 
 	   </ul>
 
 	   <ul>Mailing Lists
