added mailing list info items
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@530 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
 	<h2>ftnpl Project links</h2> 
 
 	   <ul>Home Page
-	    <li><a href="http://ftnpl.sourceforge.net"> ftnl.sourceforge.net </a> </li>
-	    <li>Or <a href="http://ftnpl.sf.net"> ftnpl.sf.net </a> </li>
+	    <li><a href="http://ftnpl.sourceforge.net">ftnl.sourceforge.net</a>&nbsp;or&nbsp;<a href="http://ftnpl.sf.net">ftnpl.sf.net</a> </li>
 	   </ul>
 
 	   <ul>Summary Page
-	    <li><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl  </a></li>
+	    <li><a href="http://sourceforge.net/projects/ftnpl">http://sourceforge.net/projects/ftnpl</a></li>
 	   </ul>
 
 	   <ul>
-	    <li>Project<a href="http://sourceforge.net/news/?group_id=29063"> News </a> </li>
+	    <li>Project<a href="http://sourceforge.net/news/?group_id=29063">News</a></li>
 	   </ul>
 
 	   <ul>Project CVS 
 	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">Browse the Project CVS</a> </li> 
 	   </ul>
 
-	   <ul>Mailing Lists
-	    <li>ftnpl-user</li>
-	    <li>ftnpl-develop</li>
-	    <li>ftnpl-announce</li>
-	<!--   This link isn't working properly...  8/26/01 - rjc
+	   <ul>Mailing Lists 
+	    <li>ftnpl-user, ftnpl-develop, ftnpl-announce, &amp; ftnpl-cvs</li>
+	    <li>Click on the <i>Mail</i> link on the Project Summary page for more information.</li>
+
+	<!--   This link still isn't working properly like this...  5/23/06 - rjc
 	    <li>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></li>
 	-->
+
 	   </uL>
 
         </div>
