clean up spaces
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@531 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
 	     <dd>Links to other Fidonet related Perl <a href="links.html">scripts</a></dd>
 
 	    <dt>FTN Related Applications</dt> 
-	     <dd>Fidonet related Software <a href="applications.html"> Applications </a>that could or are already using Perl scripts</dd>
+	     <dd>Fidonet related Software <a href="applications.html">Applications</a>&nbsp;that could or are already using Perl scripts</dd>
 
 	    <dt>Information</dt> 
-	     <dd><a href="information.html#fidonet">Fidonet</a>&nbsp;Information </dd>
-	     <dd><a href="information.html#perl">Perl</a>&nbsp;Information </dd>
+	     <dd><a href="information.html#fidonet">Fidonet</a>&nbsp;Information</dd>
+	     <dd><a href="information.html#perl">Perl</a>&nbsp;Information</dd>
 
 	  </dl>
 
@@ -73,7 +73,7 @@
 	   </ul>
 
 	   <ul>Project CVS 
-	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">Browse the Project CVS</a> </li> 
+	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">Browse the Project CVS</a></li> 
 	   </ul>
 
 	   <ul>Mailing Lists 
