added reference to skeletal version of nodelist module
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@533 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -51,7 +51,8 @@
 		    
         	<ul>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  
         	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05, by Serguel Trouchelle  </li>
-        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a> - FTN::Nodelist::Node v1.01, by Serguel Trouchelle  (part of FTN::Nodelist) </li>
+        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle  (part of FTN::Nodelist) </li>
+        	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl/modules/FTN/Nodelist/?pathrev=MAIN">FTN-Nodelist-0.01</a>&nbsp;- FTN::Nodelist v0.01, a skeletal version from 2001-2002 by&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a>&nbsp;(see CVS Repository)</li>
 		</ul>
 
 
