corrected home page link
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@539 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<h2>ftnpl Project links</h2> 
 
 	   <ul>Home Page
-	    <li><a href="http://ftnpl.sourceforge.net">ftnl.sourceforge.net</a>&nbsp;or&nbsp;<a href="http://ftnpl.sf.net">ftnpl.sf.net</a> </li>
+	    <li><a href="http://ftnpl.sourceforge.net">ftnpl.sourceforge.net</a>&nbsp;or&nbsp;<a href="http://ftnpl.sf.net">ftnpl.sf.net</a> </li>
 	   </ul>
 
 	   <ul>Summary Page
