--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <div id="header">
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
-        <div class="headerSubTitle" title="Description of page">
+        <div class="headerSubTitle" title="Description of of page">
           How to contact ftnpl members 
         </div>
       </div>
@@ -33,29 +33,29 @@
     <div id="mainbody">
       <div class="rowOfBoxes">
         <div class="fullWidth noBorderOnLeft">
-	<h2>Contacting <a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
+	<h2>Contacting&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a></h2>
 
 	<ul>
-	 <li><a href="mailto:jame@users.sourceforge.net"><a> jame@users.sourceforge.net</i></a></li>
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:120/546@fidonet.</li>
+	 <li><a href="mailto:jame@users.sourceforge.net"><a>&nbsp;jame@users.sourceforge.net</i></a></li>
+	 <li>If you have access to&nbsp;<a href="ftninfo.html">Fidonet</a>, you could netmail him at 1:120/546@fidonet.</li>
 	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/402.</li>
 	</ul>
 
-	<h2>Contacting <a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
+	<h2>Contacting&nbsp;<a href="http://sourceforge.net/users/airneil">Russ Johnson</a></h2>
 
 	<ul>
-	 <li><a href="mailto:airneil@users.sourceforge.net"><a> airneil@users.sourceforge.net</i></a></li>
+	 <li><a href="mailto:airneil@users.sourceforge.net"><a>airneil@users.sourceforge.net</i></a></li>
 	<!--	
 	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
 	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
 	-->
 	</ul>
 
-	<h2>Contacting <a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
+	<h2>Contacting&nbsp;<a href="http://sourceforge.net/users/bswift">Bob Swift</a></h2>
 	
 	<ul>
-	 <li><a href="mailto:bswift@users.sourceforge.net"><a> bswift@users.sourceforge.net</i></a></li>
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:342/5.</li>
+	 <li><a href="mailto:bswift@users.sourceforge.net"><a>bswift@users.sourceforge.net</i></a></li>
+	 <li>If you have access to&nbsp;<a href="ftninfo.html">Fidonet</a>, you could netmail him at 1:342/5.</li>
 	</ul>
 
 
@@ -73,10 +73,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2001-2006 Robert James Clay</font>
-<!--	  Any comments, suggestions, questions, etc. about this or
-	   any other page at this site; please feel free to
-	    <a href="contact.html">contact</a> one of us. -->
+	  <font size="-2">Copyright &copy;2001-2006 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
