corrected Fidonet info page reference
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@544 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
 
 	<ul>
 	 <li><a href="mailto:jame@users.sourceforge.net"><a>&nbsp;jame@users.sourceforge.net</i></a></li>
-	 <li>If you have access to&nbsp;<a href="ftninfo.html">Fidonet</a>, you could netmail him at 1:120/546@fidonet.</li>
+	 <li>If you have access to&nbsp;<a href="information.html">Fidonet</a>, you could netmail him at 1:120/546@fidonet.</li>
 	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:4150/402.</li>
 	</ul>
 
@@ -46,7 +46,7 @@
 	<ul>
 	 <li><a href="mailto:airneil@users.sourceforge.net"><a>airneil@users.sourceforge.net</i></a></li>
 	<!--	
-	 <li>If you have access to <a href="ftninfo.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
+	 <li>If you have access to <a href="information.html"> Fidonet </a>, you could netmail him at 1:105/8.</li>
 	 <li>If you have access to Sysops TechNet, you can also netmail him at 111:5150/1.</li>
 	-->
 	</ul>
@@ -55,7 +55,7 @@
 	
 	<ul>
 	 <li><a href="mailto:bswift@users.sourceforge.net"><a>bswift@users.sourceforge.net</i></a></li>
-	 <li>If you have access to&nbsp;<a href="ftninfo.html">Fidonet</a>, you could netmail him at 1:342/5.</li>
+	 <li>If you have access to&nbsp;<a href="information.html">Fidonet</a>, you could netmail him at 1:342/5.</li>
 	</ul>
 
 
