minor html edits
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@545 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/applications.html
+++ b/applications.html
@@ -38,23 +38,23 @@
         <p>The following is a sample listing of Fidonet related Software applications
         that can use or are already using Perl scripts.</p>
 
-        <ul>Fidogate (<a href="http://www.fidogate.org"> www.fidogate.org</a>)
+        <ul>Fidogate (<a href="http://www.fidogate.org">www.fidogate.org</a>)
           <li>An Fidonet - Internet gateway application which has an extensive set of Perl scripts associated with it.</li>
-          <li>Fidogate (<a href="http://fidogate.sf.net"> fidogate.sf.net</a>) project at SourceForge</li>
-          <li>A Russian version of the Fidogate (<a href="http://rusfidogate.sf.net"> rusfidogate.sf.net</A>) project at SourceForge</li>
+          <li>Fidogate (<a href="http://fidogate.sf.net">fidogate.sf.net</a>) project at SourceForge</li>
+          <li>A Russian version of the Fidogate (<a href="http://rusfidogate.sf.net">rusfidogate.sf.net</A>) project at SourceForge</li>
 	</ul>
   
-        <ul>HPT (<a href="http://husky.sourceforge.net/hpt.html"> husky.sourceforge.net/hpt.html</A>)
-          <li>Highly Portable Tosser;  part of the <a href="http://husky.sourceforge.net"> Husky </A>project.</li>
+        <ul>HPT (<a href="http://husky.sourceforge.net/hpt.html">husky.sourceforge.net/hpt.html</A>)
+          <li>Highly Portable Tosser;  part of the&nbsp;<a href="http://husky.sourceforge.net">Husky</A>&nbsp;project.</li>
           <li>Has an extensive set of Perl hooks built into it.</li>
 	</ul>
 	 
         <ul>BinkD
           <li>BinkD is Fidonet mailer which is designed to operate over TCP/IP netowrks and now has an extensive set of Perl hooks built into it.</li>
-          <li>A good information site for BinkD is at <a href="http://binkd.grumbler.org"> binkd.grumbler.org </A></li>
+          <li>A good information site for BinkD is at&nbsp;<a href="http://binkd.grumbler.org">binkd.grumbler.org</A></li>
 	</ul>
 	 
-         <ul>BBBS (<a href="http://www.bbbs.net"> www.bbbs.net</a>)
+         <ul>BBBS (<a href="http://www.bbbs.net">www.bbbs.net</a>)
           <li>This is a BBS program that is available for many different platforms, 
              and while it has it's own scripting language it can also be set up to
              use Perl.</li>
@@ -76,10 +76,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
-<!--	  Any comments, suggestions, questions, etc. about this or
-	   any other page at this site; please feel free to
-	    <a href="contact.html">contact</a> one of us. -->
+	  <font size="-2">Copyright &copy;2006 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
