--- a/links.html
+++ b/links.html
@@ -45,7 +45,7 @@
            <li>Freq'able at Fidonet 1:261/38</li>
         </ul>
 
-        <ul><a href="http://www.ftngate.net">FTNGate.Net</a>
+        <ul><a href="http://ftn.rocasa.us">ftn.rocasa.us</a>
            <li>Fidonet Related Perl files</li>
            <li>Also Freq'able at Fidonet 1:120/544</li>
         </ul>
