--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -51,7 +51,7 @@
 		    
         	<ul>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  
         	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/">FTN-Nodelist-1.05</a> - FTN::Nodelist v1.05, by Serguel Trouchelle  </li>
-        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle  (part of FTN::Nodelist) </li>
+        	    <li><a href="http://search.cpan.org/~stro/FTN-Nodelist-1.05/Nodelist/Node.pm">FTN-Nodelist-Node-1.01</a>&nbsp; - FTN::Nodelist::Node v1.01, by Serguel Trouchelle  (part of FTN::Nodelist v1.05) </li>
         	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl/modules/FTN/Nodelist/?pathrev=MAIN">FTN-Nodelist-0.01</a>&nbsp;- FTN::Nodelist v0.01, a skeletal version from 2001-2002 by&nbsp;<a href="http://sourceforge.net/users/jame">Robert James Clay</a>&nbsp;(see CVS Repository)</li>
 		</ul>
 
@@ -71,10 +71,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
-<!--	  Any comments, suggestions, questions, etc. about this or
-	   any other page at this site; please feel free to
-	    <a href="contact.html">contact</a> one of us. -->
+	  <font size="-2">Copyright &copy;2006 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
