Updated link for SourceForge Logo
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@548 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/ftnplsrf.html
+++ b/ftnplsrf.html
@@ -64,14 +64,11 @@
 	 <tr><td>
 
 	 <a href="http://sourceforge.net">
-	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
+	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
 	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
-<!--	  Any comments, suggestions, questions, etc. about this or
-	   any other page at this site; please feel free to
-	    <a href="contact.html">contact</a> one of us. -->
 	 </td></tr)
 	</table>
     </div>
