--- a/applications.html
+++ b/applications.html
@@ -72,8 +72,8 @@
 	 <tr><td>
 
 	 <a href="http://sourceforge.net">
-	 <img src="http://sourceforge.net/sflogo.php?group_id=29063&type=1"
-	  width="88" height="31" border="0" alt="SourceForge Logo"></a>
+	 <img src="http://sflogo.sourceforge.net/sflogo.php?group_id=29063&amp;type=1"
+	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
 	  <font size="-2">Copyright &copy;2006 Robert James Clay</font>
