Add SVN link & change mail link in ftnpl index.html.
git-svn-id: https://ftnpl.svn.sourceforge.net/svnroot/ftnpl/trunk/htdocs@574 987ebf5b-b7b1-44df-af0d-bd292689ea74

--- a/index.html
+++ b/index.html
@@ -69,20 +69,18 @@
 	   </ul>
 
 	   <ul>
-	    <li>Project<a href="http://sourceforge.net/news/?group_id=29063">News</a></li>
+	    <li>Project&nbsp;<a href="http://sourceforge.net/news/?group_id=29063">News</a></li>
 	   </ul>
 
-	   <ul>Project CVS 
-	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">Browse the Project CVS</a></li> 
+	   <ul>Browse the Project:
+	    <li><a href="http://ftnpl.svn.sourceforge.net/ftnpl">SVN</a>&nbsp;repository.</li> 
+	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">CVS</a>&nbsp;repository.</li> 
 	   </ul>
 
 	   <ul>Mailing Lists 
 	    <li>ftnpl-user, ftnpl-develop, ftnpl-announce, &amp; ftnpl-cvs</li>
-	    <li>Click on the <i>Mail</i> link on the Project Summary page for more information.</li>
-
-	<!--   This link still isn't working properly like this...  5/23/06 - rjc
-	    <li>Mailing <a href="http://sourceforge.net/mail/?groupid=29063"> Lists</a></li>
-	-->
+	    <li>Lists&nbsp;<a href="http://sourceforge.net/mail/?group_id=29063">Information</a></li>
+	
 
 	   </uL>
 
