Add GIT repositories reference to index page.

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 	   </ul>
 
 	   <ul>Browse the Project:
+	    <li><a href="http://ftnpl.git.sourceforge.net/git/gitweb-index.cgi">GIT</a>&nbsp;repositories</li> 
 	    <li><a href="http://ftnpl.svn.sourceforge.net/ftnpl">SVN</a>&nbsp;repository.</li> 
 	    <li><a href="http://ftnpl.cvs.sourceforge.net/ftnpl">CVS</a>&nbsp;repository.</li> 
 	   </ul>
