Added FTN::JAM to web site.

--- a/ftnpljam.html
+++ b/ftnpljam.html
@@ -1,9 +1,9 @@
 <html>
   <head>
-     <title>FTN::Log Perl Module</title>
+     <title>FTN::JAM Perl Module</title>
      <meta name="author" content="Robert James Clay">
      <meta name="keywords" CONTENT="Perl Fidonet FTN BBS">
-     <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS">
+     <meta http-equiv="KEYWORDS" CONTENT="Perl, Modules, Fidonet, FTN, BBS, JAM">
      <meta name="description" CONTENT="Fidonet(FTN) related Perl Modules">
      <link rel="stylesheet" type="text/css" href="./screen.css" media="screen, tv, projection" title="Default" />
      <link rel="stylesheet" type="text/css" href="./print.css" media="print" />
@@ -14,7 +14,7 @@
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          FTN::Log Perl Module
+          FTN::JAM Perl Module
         </div>
       </div>
       <div class="subHeader">
@@ -48,12 +48,13 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>FTN::Log</h2>
-
-        	<ul>ftnpllog - FTN::Log - Perl module for FTN compatible Logging. 
-		    <li>FTN-Log v0.02</li>
+        <h2>FTN::JAM</h2>
+        
+		<ul>ftnpljam - FTN::JAM - Perl module for processing JAM messagebases. 
+		    <li>(under development)</li>
 		</ul>
-		    
+
+
         </div>
       </div>
 
