--- a/ftnplnl.html
+++ b/ftnplnl.html
@@ -32,6 +32,7 @@
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
         <a href="./ftnplinb.html">Inbound</a> |
+        <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
         <a href="./ftnplout.html">Outbound</a> |
@@ -71,7 +72,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy;2006 Robert James Clay</font>
+	  <font size="-2">Copyright &copy;2010 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
