--- a/modules.html
+++ b/modules.html
@@ -32,6 +32,7 @@
         <a href="./modules.html">Index</a> |
         <a href="./ftnpladx.html">Address</a> |
         <a href="./ftnplinb.html">Inbound</a> |
+        <a href="./ftnpljam.html">JAM</a> |
         <a href="./ftnpllog.html">Log</a> |
         <a href="./ftnplnl.html">Nodelist</a> |
         <a href="./ftnplout.html">Outbound</a> |
@@ -54,6 +55,8 @@
 
         	<li>ftnplinb - FTN::Inbound - Perl module for processing FTN inbound directories. </li>
 
+        	<li>ftnpljam - FTN::JAM - Perl module for FTN JAM Messagebase processing. </li>
+		    
         	<li>ftnpllog - FTN::Log - Perl module for FTN compatible Logging. </li>
 		    
         	<li>ftnplnl - FTN::Nodelist - Perl module for reading FTN nodelists.  </li>
@@ -90,7 +93,7 @@
 	  width="88" height="31" border="0" alt="SourceForge Logo"/></a>
 
 	 </td><td align="right">
-	  <font size="-2">Copyright &copy; 2006 Robert James Clay</font>
+	  <font size="-2">Copyright &copy; 2010 Robert James Clay</font>
 	 </td></tr)
 	</table>
     </div>
