Update references for public domain Perl JAM.pm module.

--- a/ftnmodpl.html
+++ b/ftnmodpl.html
@@ -52,8 +52,8 @@
         <h2>Other Fidonet related Perl Modules.</h2>
 
         <ul>A Perl JAM.pm Module, by Johann Billings
-           <li><a href="http://www.billingware.org/jamlib.html"> http://www.billingware.org/jamlib.html</a>:  Link is at botton of page.</li>
-           <li>Perl interface to the FTN JAM message base.</li>
+           <li><a href="http://bitbucket.org/johanbilling/jampm/">http://bitbucket.org/johanbilling/jampm/</a></li>
+           <li>Public Domain reimplementation of JAMLIB in Perl for accessing FTN JAM messagebases from Perl scripts.</li>
         </ul>
 
 
