--- a/modules.html
+++ b/modules.html
@@ -74,8 +74,8 @@
 
         <h2><a href="ftnmodpl.html">Other </a>Fidonet related Perl Modules.</h2>
 
-        <ul>A Perl JAM.pm Module, by Johann Billings
-           <li><a href="http://www.billingware.org/jamlib.html"> http://www.billingware.org/jamlib.html</a>:  Link is at botton of page.</li>
+        <ul>
+           <li>Perl JAM.pm module, by Johann Billings.  A public domain Perl subroutine library for manipulation of JAM messagebases.</li>
         </ul>
 
 
