Reorganize ftnplpkt page & add FTN::Pkt.
Reorganize the ftnpl FTN Packet Modules page, and add
initial information aboutthe FTN::Pkt module to the page.

--- a/ftnplpkt.html
+++ b/ftnplpkt.html
@@ -14,7 +14,7 @@
       <div class="Header">
        <h1 class="headerTitle" lang="en">Perl for Fidonet (FTN) Systems</h1>
         <div class="headerSubTitle" title="Description of page">
-          FTN::Packet Perl Module
+          FTN Packet Perl Modules
         </div>
       </div>
       <div class="subHeader">
@@ -48,13 +48,17 @@
       <div class="rowOfBoxes">
         <div class="fullWidth">
 
-        <h2>Fidonet related Perl Modules in the FTN namespace.</h2>
+    	    <p>Fidonet packet related Perl Modules in the FTN namespace.</p>
 
-    		<ul>ftnplpkt - FTN::Packet - Perl module for reading/writing FTN packets.  
-		    <li>(to be developed)</li>
-		</ul>
+    	    <ul><b>FTN::Packet</b> - ftnplpkt
+		<li>Perl module for reading/writing FTN packets.  </li>
+		<li>(to be developed)</li>
+	    </ul>
         
-
+    	    <ul><b>FTN::Pkt</b>
+    		<li>Perl module for making FTN style packets.  Includes FTN::Msg and FTN::OS_features.</li>
+		<li><a href="http://search.cpan.org/~keu/FTN-Pkt-1.02">FTN-Pkt-1.02</a> - FTN::Pkt v1.02, by Dmitry V. Kolvakh</li>
+	    </ul>
 
         </div>
       </div>
